--- a/templates/admin/summary.html
+++ b/templates/admin/summary.html
@@ -22,7 +22,7 @@
         
         <div class="row mb-4">
             <!-- User & Reservation Statistics -->
-            <div class="col-md-3 mb-3">
+            <div class="col-12 col-md-3 mb-3">
                 <div class="card text-center">
                     <div class="card-body">
                         <h3 class="text-primary">{{ summary.total_users }}</h3>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-12 col-md-3 mb-3">
                 <div class="card text-center">
                     <div class="card-body">
                         <h3 class="text-info">{{ summary.total_reservations }}</h3>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-12 col-md-3 mb-3">
                 <div class="card text-center">
                     <div class="card-body">
                         <h3 class="text-success">{{ summary.completed_reservations }}</h3>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-12 col-md-3 mb-3">
                 <div class="card text-center">
                     <div class="card-body">
                         <h3 class="text-warning">{{ summary.active_reservations }}</h3>
