--- a/templates/admin/lots.html
+++ b/templates/admin/lots.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}Parking Lots{% endblock %}
 {% block content %}
-<div class="d-flex justify-content-between align-items-center mb-3">
+<div class="d-flex flex-column flex-md-row justify-content-between align-items-center mb-3">
   <h3>Parking Lots</h3>
-  <a class="btn btn-success" href="{{ url_for('add_lot') }}">+ Add Lot</a>
+  <a class="btn btn-success mt-2 mt-md-0" href="{{ url_for('add_lot') }}">+ Add Lot</a>
 </div>
 
+<div class="table-responsive">
 <table class="table table-striped align-middle">
   <thead>
     <tr>
@@ -36,4 +37,5 @@
   {% endfor %}
   </tbody>
 </table>
+</div>
 {% endblock %}
