--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -2,6 +2,7 @@
 {% block title %}Users{% endblock %}
 {% block content %}
 <h3>Registered Users</h3>
+<div class="table-responsive">
 <table class="table table-bordered table-sm align-middle">
   <thead class="table-light">
     <tr>
@@ -26,4 +27,5 @@
   {% endfor %}
   </tbody>
 </table>
+</div>
 {% endblock %}
