--- a/templates/user/lots.html
+++ b/templates/user/lots.html
@@ -76,7 +76,7 @@
                         <div class="row mb-2">
                             <div class="col-sm-4"><strong>Price per Hour:</strong></div>
                             <div class="col-sm-8">
-                                <span class="badge bg-success">${{ data.lot.price_per_hour }}</span>
+                                <span class="badge bg-success">₹{{ data.lot.price_per_hour }}</span>
                             </div>
                         </div>
                         <div class="row mb-2">
