--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -132,6 +132,9 @@
                                     <div class="text-center">
                                         {% if not current_reservation.occupy_time %}
                                             <form method="POST" action="{{ url_for('occupy_spot', reservation_id=current_reservation.id) }}" class="mb-2">
+                                                <div class="mb-2">
+                                                    <input type="text" name="vehicle_number" class="form-control" placeholder="Enter Vehicle Number" required value="{{ current_reservation.vehicle_number }}">
+                                                </div>
                                                 <button type="submit" class="btn btn-success btn-lg w-100">
                                                     <i class="bi bi-play-circle"></i> Occupy Spot
                                                 </button>
